--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple (Kenya)</title>
-    <link
-      rel="stylesheet"
-      href="/wss/fonts?families=SF+Pro,v3|SF+Pro+Icons,v3"
-      type="text/css"
-      media="all"
-    />
-    <link rel="stylesheet" href="css/styles.css"
+    
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/normalize.css"/>
   </head>
   <body>
     <nav class="nav">
